SERVER-16830 Fix LiteParsedQuery find command object "hint" parsing