src/mongo/db/query/lite_parsed_query.cpp
@@ -116,7 +116,7 @@ namespace mongo {
                     hintObj = cmdObj["hint"].Obj().getOwned();
                 }
                 else if (String == el.type()) {
-                    hintObj = el.wrap();
+                    hintObj = el.wrap("$hint");
                 }
                 else {
                     return Status(ErrorCodes::BadValue,
@@ -774,10 +774,12 @@ namespace mongo {
                     if (e.isABSONObj()) {
                         _hint = e.embeddedObject().getOwned();
                     }
-                    else {
-                        // Hint can be specified as an object or as a string.  Wrap takes care of
-                        // it.
+                    else if (String == e.type()) {
                         _hint = e.wrap();
+                    }
+                    else {
+                        return Status(ErrorCodes::BadValue,
+                                      "$hint must be either a string or nested object");
                     }
                 }
                 else if (str::equals("returnKey", name)) {
