src/mongo/db/query/lite_parsed_query.h
@@ -108,7 +108,7 @@ namespace mongo {
         };
 
         /**
-         * Parses a count command object, 'cmdObj'. Caller must indicate whether or not
+         * Parses a find command object, 'cmdObj'. Caller must indicate whether or not
          * this lite parsed query is an explained query or not via 'isExplain'.
          *
          * On success, fills in the out-parameter 'parsedQuery' and returns an OK status.
@@ -262,9 +262,13 @@ namespace mongo {
         BSONObj _filter;
         BSONObj _sort;
         BSONObj _proj;
-        BSONObj _hint;
         bool _wantMore;
         bool _explain;
+
+        // The hint provided, if any.  If the hint was by index key pattern, the value of '_hint' is
+        // the key pattern hinted.  If the hint was by index name, the value of '_hint' is
+        // {$hint: <String>}, where <String> is the index name hinted.
+        BSONObj _hint;
 
         Options _options;
     };
